[gd_scene load_steps=7 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Level1.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/light.png" type="Texture" id=3]
[ext_resource path="res://fonts/rainyhearts.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.051
anchor_top = 0.451
anchor_right = 0.705
anchor_bottom = 0.931
margin_left = -0.0560007
margin_top = 0.0559921
margin_right = -53.48
margin_bottom = -0.0640106

[node name="StartGame" type="Button" parent="CanvasLayer/HBoxContainer"]
margin_right = 114.0
margin_bottom = 21.0
theme = SubResource( 2 )
text = "Start Game"
align = 0

[node name="Options" type="Button" parent="CanvasLayer/HBoxContainer"]
margin_top = 25.0
margin_right = 114.0
margin_bottom = 46.0
theme = SubResource( 2 )
text = "Options"
align = 0

[node name="QuitGame" type="Button" parent="CanvasLayer/HBoxContainer"]
margin_top = 50.0
margin_right = 114.0
margin_bottom = 71.0
theme = SubResource( 2 )
text = "Quit Game"
align = 0

[node name="Level1" parent="." instance=ExtResource( 2 )]
position = Vector2( 217, -2 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 196, -90 )
z_index = 4
texture = ExtResource( 3 )
texture_scale = 3.42
energy = 0.42
range_height = 2048.0

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 1.2, 1.2 )

[connection signal="pressed" from="CanvasLayer/HBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
